--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
     "pino-http": "^10.2.0"
   }
