--- a/swagger/paths/register/post.yaml
+++ b/swagger/paths/register/post.yaml
@@ -47,6 +47,6 @@ responses:
               example: Successfully registered a user!
             data:
               type: object
-              $ref: ../../components/schemas/auth.yaml
+              # $ref: ../../components/schemas/auth.yaml
   '409':
     $ref: ../../components/responses/409.yaml
