--- a/swagger/paths/{id}/patch.yaml
+++ b/swagger/paths/{id}/patch.yaml
@@ -14,7 +14,7 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 requestBody:
   content:
-    JSON:
+    multipart/form-data:
       schema:
         type: object
         required: []
