--- a/swagger/paths/{id}/patch.yaml
+++ b/swagger/paths/{id}/patch.yaml
@@ -65,7 +65,7 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found contact with id 65ca67e7ae7f10c88b598384!
+              example: Successfully patched contact!
             data:
               type: object
               $ref: ../../components/schemas/updateContact.yaml
