--- a/swagger/paths/login/post.yaml
+++ b/swagger/paths/login/post.yaml
@@ -3,11 +3,10 @@ tags:
 summary: Login user
 operationId: loginUser
 description: 'Login user'
-security:
-  - bearerAuth: []
+security: []
 requestBody:
   content:
-    multipart/form-data:
+    JSON:
       schema:
         type: object
         required:
