--- a/swagger/paths/login/post.yaml
+++ b/swagger/paths/login/post.yaml
@@ -6,7 +6,7 @@ description: 'Login user'
 security: []
 requestBody:
   content:
-    JSON:
+    application/json:
       schema:
         type: object
         required:
