fixed schema fore rut request

--- a/swagger/paths/{id}/put.yaml
+++ b/swagger/paths/{id}/put.yaml
@@ -17,7 +17,9 @@ requestBody:
     multipart/form-data:
       schema:
         type: object
-        required: []
+        required:
+          - name
+          - phoneNumber
         properties:
           name:
             description: 'Contact name'
