--- a/swagger/components/schemas/session.yaml
+++ b/swagger/components/schemas/session.yaml
@@ -4,6 +4,7 @@ required:
   - refreshToken
   - accessTokenValidUntil
   - refreshTokenValidUntil
+  - userId
 properties:
   accessToken:
     description: 'Access token'
@@ -11,11 +12,25 @@ properties:
   refreshToken:
     description: 'Refresh token'
     type: string
-  name:
-    description: 'User name'
+  user:
+    type: object
+    properties:
+      name:
+        description: 'User name'
+        type: string
+        example: 'John'
+      email:
+        description: 'User email'
+        type: string
+        example: 'john@gmail.com'
+  userId:
+    description: 'User ID'
     type: string
-    example: 'John'
-  email:
-    description: 'User email'
+  accessTokenValidUntil:
+    description: 'Access token expiration date'
     type: string
-    example: 'john@gmail.com'
+    format: date-time
+  refreshTokenValidUntil:
+    description: 'Refresh token expiration date'
+    type: string
+    format: date-time
